--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,4 +4,5 @@ ProjectName=Third Person BP Game Template
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 bGenerateChunks=True
+IncludeDebugFiles=True
 
