Setup Base Classes for future mod examples
*Added some structs
*Getting Ready for Weapon Mod examples
*Began Setting up a base game cause why not lol

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=ModdingExample
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Levels/ThirdPersonExampleMap.ThirdPersonExampleMap
 GameDefaultMap=/Game/Levels/Menu.Menu
 TransitionMap=
 bUseSplitscreen=True
